--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
           command: gradle test
       - store_test_results:
           path: build/test-results
+      - run:
+          name: Artifact Step
+          command: gradle jar
       - store_artifacts:
           path: build/libs
           desitnation: prefix
