--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,16 +15,18 @@ jobs:
       - image: circleci/openjdk:8-jdk
     steps:
       - run:
-        name: Artifact Step
-        command: gradle jar
+          name: Artifact Step
+          command: gradle jar
       - store_artifacts:
-        path: build/libs
-        desitnation: prefix
+          path: build/libs
+          desitnation: prefix
 
 
 workflows:
-  version: 2.0
+  version: 2
   test_and_package:
     jobs:
       - test
-      - package
+      - package:
+          requires:
+            - test
