--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
     docker: 
       - image: circleci/openjdk:8-jdk
     steps:
+      - checkout
       - run:
           name: Artifact Step
           command: gradle jar
