--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,17 @@ jobs:
           command: gradle test
       - store_test_results:
           path: build/test-results
+      - persist_to_workspace:
+          root: workspace
+          paths: 
+            - . 
   package:
     require: test
     docker: 
       - image: circleci/openjdk:8-jdk
     steps:
-      - checkout
+      - attach_workspace:
+          at: /tmp/workspace
       - run:
           name: Artifact Step
           command: gradle jar
