--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - store_test_results:
           path: build/test-results
       - persist_to_workspace:
-          root: workspace
+          root: test
           paths: 
             - . 
   package:
