--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,10 @@ jobs:
       - store_artifacts:
           path: build/libs
           desitnation: prefix
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - .
 
 
 workflows:
