--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - home/circleci/project/build/test-results
+            - build/test-results
 
   package:
     docker: 
@@ -29,7 +29,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - home/circleci/project/build/libs/gildedrose-0.0.1-SNAPSHOT.jar
+            - build/libs/gildedrose-0.0.1-SNAPSHOT.jar
 
 
 workflows:
