--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - store_test_results:
           path: build/test-results
       - persist_to_workspace:
-          root: ~/
+          root: .
           paths:
             - .
 
@@ -19,7 +19,7 @@ jobs:
       - image: circleci/openjdk:8-jdk
     steps:
       - attach_workspace:
-          at: ~/
+          at: .
       - run:
           name: Artifact Step
           command: gradle jar
@@ -27,10 +27,11 @@ jobs:
           path: build/libs
           desitnation: prefix
       - persist_to_workspace:
-          root: ~/
+          root: .
           paths:
             - .
           #  - project/build/libs/gildedrose-0.0.1-SNAPSHOT.jar
+
 
 
 workflows:
