--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 jobs:
+    
   test:
     docker: 
       - image: circleci/openjdk:8-jdk
@@ -31,8 +32,16 @@ jobs:
           paths:
             - .
           #  - project/build/libs/gildedrose-0.0.1-SNAPSHOT.jar
-
-
+  
+  dockerize:
+    machine: true
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run: docker build -t $DOCKER_USER/myapp:$CIRCLE_SHA1
+      - run: docker push $DOCKER_USER/myapp:$CIRCLE_SHA1
 
 workflows:
   version: 2
@@ -42,3 +51,6 @@ workflows:
       - package:
           requires:
             - test
+      - dockerize:
+          requires:
+            - package
