--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker build -t $DOCKER_USER/myapp:$CIRCLE_SHA1
+      - run: docker build -t $DOCKER_USER/myapp:$CIRCLE_SHA1 .
       - run: docker push $DOCKER_USER/myapp:$CIRCLE_SHA1
 
 workflows:
